tests/ui/resolve/name-clash-nullary.stderr
error[E0308]: mismatched types
  --> $DIR/name-clash-nullary.rs:2:7
   |
LL |   let None: isize = 42;
   |       ^^^^  ----- expected due to this
   |       |
   |       expected `isize`, found `Option<_>`
   |
   = note: expected type `isize`
              found enum `Option<_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
